--- a/index.html
+++ b/index.html
@@ -166,12 +166,14 @@
                 </div>
             </div>
         </section>
+         <!-- prima sezione contenente una sola immagine -->
         <section class="main-container single-figure">
             <figure>
                 <img src="./assets/img_9.png" alt="">
                 <figcaption>Play the gitting game <a href="#">Shop gaming</a></figcaption>
             </figure>
         </section>
+         <!-- seconda sezione contenente una sola immagine -->
         <section class="main-container single-figure">
             <figure>
                 <img src="./assets/img_10.png" alt="">
